Created N8N module for backend

--- a/discogs-back/.env
+++ b/discogs-back/.env
@@ -1,8 +1,8 @@
 #MySQL settings
 MY_SQL_DB_HOST=127.0.0.1
 MY_SQL_DB_PORT=3306
-MY_SQL_DB_USER=discogs_user
-MY_SQL_DB_PASSWORD=your_password
+MY_SQL_DB_USER=discuser
+MY_SQL_DB_PASSWORD=discpassword
 MY_SQL_DB_DATABASE=Discogs
 MY_SQL_DB_CONNECTION_LIMIT=10
 
