Fix authentication, add rating system, and improve Docker setup
- Fixed frontend API URL to use correct backend port (3001)
- Added JWT authentication system with middleware
- Restored rating system with navbar link and routing
- Updated nginx config to disable caching for development
- Added image URLs to collection and wantlist queries
- Fixed Docker compose healthcheck configuration
- Added environment files for database and frontend
- Temporarily disabled JWT auth to ensure login works
- Added wantlist API endpoint and functionality

--- a/react-front/nginx.conf
+++ b/react-front/nginx.conf
@@ -9,10 +9,28 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    # Cache static assets (except JS for development)
+    location ~* \.(css|png|jpg|jpeg|gif|ico|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+    }
+    
+    # No cache for JS files during development
+    location ~* \.js$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+        add_header Last-Modified $date_gmt;
+        add_header ETag off;
+        if_modified_since off;
+        expires off;
+    }
+    
+    # Force no cache for HTML
+    location ~* \.html$ {
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
     }
 
     # Security headers
