--- a/discogs-back/package.json
+++ b/discogs-back/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.7",
     "openai": "^4.68.0",
@@ -27,6 +28,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mysql": "^2.15.26",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.6.3",
